RESOLVED FIXED100420
[BlackBerry] Infinite redirect loop is not displayed to user
https://bugs.webkit.org/show_bug.cgi?id=100420
Summary [BlackBerry] Infinite redirect loop is not displayed to user
Leo Yang
Reported 2012-10-25 14:57:08 PDT
If the server send 302 with body to us we will not display an error page to user although we have jumped out of the redirections.
Attachments
Patch (2.80 KB, patch)
2012-10-25 15:01 PDT, Leo Yang
no flags
Leo Yang
Comment 1 2012-10-25 15:01:07 PDT
WebKit Review Bot
Comment 2 2012-10-25 19:20:30 PDT
Comment on attachment 170738 [details] Patch Clearing flags on attachment: 170738 Committed r132556: <http://trac.webkit.org/changeset/132556>
WebKit Review Bot
Comment 3 2012-10-25 19:20:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.